--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+DS_Store/
+DS_Store
+
 # Distribution / packaging
 .Python
 build/
@@ -106,3 +109,5 @@ venv.bak/
 
 .vscode/
 .vscode
+notebooks/
+.DS_Store
